[metadata]
name = rosshm
description = ross, the house master
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/rosshm
project_urls =
	Source=https://github.com/jrmsdev/rosshm
	Tracker=https://github.com/jrmsdev/rosshm/issues
license = BSD
license_file = LICENSE
keywords = hotel, hosting, hostel, house, master, manager
classifiers =
	Development Status :: 4 - Beta
	License :: OSI Approved :: BSD License
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
platforms = linux

[options]
zip_safe = false

[options.entry_points]
console_scripts =
	rosshm=rosshm.cmd.main:main

[bdist_wheel]
universal = 0

[check-manifest]
ignore =
	rosshm/_version.py
	rosshm/_version_build.py

[aliases]
clean = clean -a
check = check -s -m
build = check build_py
dist = check sdist bdist_wheel
